--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-/*auto
-google-green: #008744;
-google-blue: #0057e7;
-google-red: #d62d20;
-google-yellow: #ffa700;
-*/
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +7,7 @@ google-yellow: #ffa700;
 body {
   font-family: sans-serif;
   /*background-color: #eee;*/
-  background: url(imgs/background-nha-trang-4.jpg) no-repeat center center fixed;
+  background: url(imgs/background-nha-trang-5.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -27,8 +21,9 @@ body {
 .todo {
   margin-top: 2rem;
   padding: 2rem 4rem;
-  border-radius: 4px;
+  border-radius: 6px;
   /*background: #1D1D2C;*/
+  background: rgba(0,0,0,.7);
   width: 100%;
   min-width: 480px;
   max-height: 600px;
@@ -66,14 +61,14 @@ body {
 }
 .todo__item:hover {
   cursor: pointer;
-  background: hsla(0,0%,100%,.1);
-  transition: transform 5s linear;
+  background: rgba(255,255,255,.1);
+  transition: .5s all ease;
 }
 .done {
   text-decoration: line-through;
-  opacity: .6;
+  opacity: .75;
   width: 70%;
-  font-size: .7rem;
+  font-size: .95rem;
   margin: 0 auto;
-  transition: 5s all ease;
+  transition: .5s all ease;
 }
