--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+/*html { margin-left: calc(100vw - 100%); }*/
+
 body {
   font-family: sans-serif;
   /*background-color: #eee;*/
@@ -28,9 +30,10 @@ body {
   min-width: 480px;
   max-height: 600px;
   color: #fff;
-  /*overflow: scroll;*/
-  overflow: hidden;
+  overflow-y: scroll;
+  /*overflow: hidden;*/
 }
+.todo::-webkit-scrollbar { width: 0 !important }
 
 /* HEADER  */
 .todo__header {
@@ -53,6 +56,10 @@ body {
 }
 
 /* THE LIST */
+/*.todo__body {
+  overflow-y: scroll;
+}*/
+/*.todo__body::-webkit-scrollbar { width: 0 !important }*/
 .todo__item {
   list-style-type: none;
   padding: 1rem 1.2rem;
@@ -61,14 +68,44 @@ body {
 }
 .todo__item:hover {
   cursor: pointer;
-  background: rgba(255,255,255,.1);
+  background: rgba(255,255,255,.2);
   transition: .5s all ease;
 }
+.todo__empty {
+  height: 0;
+}
 .done {
-  text-decoration: line-through;
-  opacity: .75;
-  width: 70%;
-  font-size: .95rem;
-  margin: 0 auto;
-  transition: .5s all ease;
+  animation: doneAnimation .2s ease-in-out forwards;
+}
+.undone {
+  animation: undoneAnimation .2s ease-in-out forwards;
+}
+
+@keyframes doneAnimation {
+  0% {
+    text-decoration: none;
+    opacity: 1;
+    font-size: 1rem;
+    width: 100%;
+  }
+  100% {
+    text-decoration: line-through;
+    opacity: .75;
+    font-size: .9rem;
+    width: 70%;
+  }
+}
+@keyframes undoneAnimation {
+  0% {
+    text-decoration: line-through;
+    opacity: .75;
+    font-size: .9rem;
+    width: 70%;
+  }
+  100% {
+    text-decoration: none;
+    opacity: 1;
+    font-size: 1rem;
+    width: 100%;
+  }
 }
